# tpchQ01_GPU

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  bench.py  compile.sh  configuration.sh  debug.sh  dependencies.sh  genlineitem.sh  plots.R
cmake/Modules/: FindCUB.cmake  FindCUDAAPIWrappers.cmake
cpu/: CMakeLists.txt  LICENSE  aggr.cpp  aggr_4.cpp  allocator.hpp  common.cpp  common.hpp  kernel_avx512.hpp  kernel_hyper.hpp  kernel_hyper_compact.hpp  kernel_naive_compact.hpp  kernel_x100.hpp  kernel_x100_old.hpp  q1.cpp  tpch_kit.cpp  tpch_kit.hpp  vectorized.cpp
expl_comp_strat/: allocator.hpp  common.cpp  common.hpp  kernel_naive.hpp  kernel_naive_compact.hpp  tpch_kit.cpp  tpch_kit.hpp  vectorized.cpp
expl_comp_strat/fail/: kernel_weld.hpp
expl_comp_strat2/: CMakeLists.txt  aggr_2.cpp  common.cpp  kernel_hyper_compact.hpp  kernel_x100.hpp  monetdb.hpp  q1.cpp  weld_i128.diff
include/: atomic_operations.cuh  bit_operations.h  constants.hpp  cpu.h  data_types.h  dates.hpp  helper.hpp  kernel.hpp
include/kernels/: coalesced.hpp  global.hpp  ht_in_local_mem.cuh  ht_in_registers.cuh  ht_per_thread_in_shared_mem.cuh  local.hpp  naive.hpp
scripts/: altbench.py  bench.py  benchmark_with_optimal_params.py  genlineitem.sh  nvprof_get_kernel_summary  plots.R  try_grid_params.py  try_options.py
src/: atomics.cuh  bit_operations.h  bit_operations.hpp  concurrentqueue.h  constants.hpp  cpu.cpp  cpu.h  data_types.h  file_access.hpp  helper.hpp  kernel.hpp  main.cu  preprocessor_shorthands.cuh
src/expl_comp_strat/: README.md  aggr.hpp  aggr_3.cpp  monetdb.cpp  vectorized.hpp
src/kernels/: ht_in_global_mem.hpp  ht_in_local_mem.cuh  ht_in_registers.cuh  ht_in_shared_mem_per_thread.cuh  ht_per_thread_in_registers.cuh  ht_per_thread_in_shared_mem.cuh
